--- a/iaroapp/templates/admin/base_site.html
+++ b/iaroapp/templates/admin/base_site.html
@@ -15,9 +15,9 @@
 <form method="post" action="{% url 'set_language' %}" id="languageForm" class="language-form">
     {% csrf_token %}
     <label for="language" class="language-label">
-        <i class="fa fa-globe" aria-hidden="true"></i>
+        <i class="fa fa-globe" style="color: white !important;" aria-hidden="true"></i>
     </label>
-    <select name="language" id="language" onchange="this.form.submit();">
+    <select name="language" id="language" onchange="changeLanguage(this.value);">
         {% for lang_code, lang_name in LANGUAGES %}
             <option value="{{ lang_code }}" {% if lang_code == LANGUAGE_CODE %}selected{% endif %}>
                 {{ lang_name }}
@@ -25,13 +25,14 @@
         {% endfor %}
     </select>
 </form>
-<script>
-    function changeLanguage(languageCode) {
-        const form = document.getElementById('languageForm');
-        form.elements.language.value = languageCode;
-        form.submit();
-    }
-</script>
+
+    <script>
+        function changeLanguage(languageCode) {
+            const form = document.getElementById('languageForm');
+            form.elements.language.value = languageCode;
+            form.submit();
+        }
+    </script>
 
 
     <style>
