--- a/iaroapp/templates/admin/base_site.html
+++ b/iaroapp/templates/admin/base_site.html
@@ -1,5 +1,5 @@
 {% extends "admin/base.html" %}
-{% load static %}
+{% load i18n static %}
 
 {% block title %}
     iaro admin panel
@@ -12,27 +12,27 @@
 
 <h1 id="site-name"><a href="{% url 'admin:index' %}">iaro Admin</a></h1>
 
-<form method="post" action="{% url 'set_language' %}" id="languageForm" class="language-form">
-    {% csrf_token %}
-    <label for="language" class="language-label">
-        <i class="fa fa-globe" style="color: white !important;" aria-hidden="true"></i>
-    </label>
-    <select name="language" id="language" onchange="changeLanguage(this.value);">
-        {% for lang_code, lang_name in LANGUAGES %}
-            <option value="{{ lang_code }}" {% if lang_code == LANGUAGE_CODE %}selected{% endif %}>
-                {{ lang_name }}
-            </option>
-        {% endfor %}
-    </select>
-</form>
+              <form method="post" action="{% url 'set_language' %}" id="languageForm" class="language-form">
+                  {% csrf_token %}
+                  <label for="language" class="language-label">
+                      <i class="fa fa-globe" style="color: white !important;" aria-hidden="true"></i>
+                  </label>
+                  <select name="language" id="language" onchange="changeLanguage(this.value);">
+                      {% for lang_code, lang_name in LANGUAGES %}
+                          <option value="{{ lang_code }}" {% if lang_code == LANGUAGE_CODE %}selected{% endif %}>
+                              {{ lang_name }}
+                          </option>
+                      {% endfor %}
+                  </select>
+              </form>
 
-    <script>
-        function changeLanguage(languageCode) {
-            const form = document.getElementById('languageForm');
-            form.elements.language.value = languageCode;
-            form.submit();
-        }
-    </script>
+              <script>
+                  function changeLanguage(languageCode) {
+                      const form = document.getElementById('languageForm');
+                      form.elements.language.value = languageCode;
+                      form.submit();
+                  }
+              </script>
 
 
     <style>
