--- a/onboarding/templates/personal_information.html
+++ b/onboarding/templates/personal_information.html
@@ -14,35 +14,29 @@
 </head>
 
 <body>
-<div class="container-fluid p-4">
-    <div class="d-flex justify-content-end mb-3">
-        <a href="?lang=en" class="btn btn-outline-primary btn-sm">{% trans "English" %}</a>
-        <a href="?lang=de" class="btn btn-outline-primary btn-sm ms-2">{% trans "Deutsch" %}</a>
-    </div>
-    <form method="post" class="card p-4">
-        {% csrf_token %}
-        {% if form.errors %}
-            <div class="alert alert-light text-sm" role="alert">
-                {% trans "There were errors with your submission. Please correct them and try again." %}
+<div class="container-fluid">
+        <form method="post" class="card p-4">
+                <div class="d-flex justify-content-end mb-3">
+            <a href="?lang=en" class="btn btn-outline-primary btn-sm">{% trans "English" %}</a>
+            <a href="?lang=de" class="btn btn-outline-primary btn-sm ms-2">{% trans "Deutsch" %}</a>
+        </div>
+            {% csrf_token %}
+            {% if form.errors %}
+                <div class="alert alert-light text-sm" role="alert">
+                    {% trans "There were errors with your submission. Please correct them and try again." %}
+                </div>
+            {% endif %}
+
+            <h3 class="card-title mb-3">{% trans "Personal Information" %}</h3>
+
+            <!-- Render form fields -->
+            <div class="form-group">
+                {{ form.as_p }}
             </div>
-        {% endif %}
 
-        <h3 class="card-title mb-3">{% trans "Personal Information" %}</h3>
-
-        <!-- Render form fields -->
-        <div class="form-group">
-            {{ form.as_p }}
-        </div>
-
-        <!-- Date Submitted Field -->
-        <div class="form-group mt-3">
-            <label>{% trans "Date Submitted:" %}</label>
-            <input type="text" class="form-control" value="{{ form.instance.date_submitted }}" readonly>
-        </div>
-
-        <!-- Submit Button -->
-        <button class="btn bg-gradient-primary mt-4" type="submit">{% trans "Submit" %}</button>
-    </form>
+            <!-- Submit Button -->
+            <button class="btn bg-gradient-primary mt-4" type="submit">{% trans "Submit" %}</button>
+        </form>
 </div>
 
 <script src="{% static 'bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
