--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -127,7 +127,6 @@
             </div>
 
 
-
             <div class="col-lg-4 mb-4">
                 <div class="card h-100">
                     <div class="card-header pb-0">
@@ -889,7 +888,7 @@
         });
     </script>
 
-
+{# Punch-clock timer #}
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         // Get punch-in timestamp from the server (convert it to milliseconds)
