--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -115,6 +115,13 @@
                                     </li>
                                 {% endfor %}
                             </ul>
+                            <div class="d-flex justify-content-center">
+                                <button class="btn mt-3 w-100 bg-gradient-primary" style="color: white;"
+                                        data-bs-toggle="modal" data-bs-target="#colleaguesModal">
+                                    Details
+                                    <i class="fa fa-info-circle" style="margin-left: 5px"></i>
+                                </button>
+                            </div>
                         {% else %}
                             <!-- User has no shifts today -->
                             <p class="text-sm">
@@ -122,6 +129,7 @@
                                 <a href="#next-shifts" class="scroll-link"><strong>Check upcoming</strong></a>
                             </p>
                         {% endif %}
+
                     </div>
                 </div>
             </div>
@@ -494,6 +502,35 @@
       </div>
     </div>
 
+    <!-- Colleagues at Work Modal -->
+    <div class="modal fade" id="colleaguesModal" tabindex="-1" aria-labelledby="colleaguesModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content card card-body rounded-4 shadow">
+          <div class="modal-header">
+            <h5 class="modal-title" id="colleaguesModalLabel">Colleagues at Work Today</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            {% if colleagues_at_work %}
+                <ul class="list-group">
+                    {% for colleague in colleagues_at_work %}
+                        <li class="list-group-item d-flex align-items-center">
+                            <img src="{{ colleague.avatar.url }}" alt="{{ colleague.first_name }} {{ colleague.last_name }}" class="avatar me-3">
+                            <div>
+                                <strong>{{ colleague.first_name }} {{ colleague.last_name }}</strong><br>
+                                <!-- Additional info can be added here -->
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>No colleagues are working today.</p>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Modal for Rating -->
     <div class="modal fade modal-tour" tabindex="-1" role="dialog" id="submitModal">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -614,6 +651,10 @@
         }
         .fa-info-circle::before {
             line-height: 0;
+        }
+
+        .stars {
+            scale: 0.75;
         }
     </style>
 
