fix rating stars style

--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -655,6 +655,7 @@
 
         .stars {
             display: flex !important;
+            flex-direction: row-reverse !important; /* Ensure stars are in left-to-right order */
             justify-content: center;
             width: 100%;
             box-sizing: border-box;
