refactor def index view

--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -657,6 +657,9 @@
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
         }
+        .modal-header {
+            border-bottom: 1px solid #38425c!important;
+        }
         .fa-info-circle::before {
             line-height: 0;
         }
