--- a/onboarding/templates/org_chart.html
+++ b/onboarding/templates/org_chart.html
@@ -1,34 +1,20 @@
 {% extends "base_generic.html" %}
-
-
 {% load static %}
+
 {% block content %}
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>iaro Tree</title>
+
+
+    <div id="tree"></div>
 
     <style>
-        /* Ваши кастомные стили, если необходимо */
-        html, body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            font-family: Helvetica, Arial, sans-serif;
-            overflow: hidden;
-        }
-
         #tree {
-            width: 100%;
-            height: 100%;
-        }
+        width: 100%;
+        height: 100%;
+        border-radius: 1rem;
+        top: -24px !important;
+    }
     </style>
-</head>
-<body>
-    <h1>iaro Tree</h1>
-    <div id="tree"></div>
+
 
     <!-- Подключение скриптов -->
     <!-- Если ваш кастомный скрипт зависит от jQuery, убедитесь, что jQuery подключен -->
@@ -91,14 +77,7 @@
                     draggable: true
                 }
             },
-            menu: {
-                pdfPreview: {
-                    text: "Export to PDF",
-                    icon: OrgChart.icon.pdf(24, 24, '#7A7A7A'),
-                    onClick: preview
-                },
-                csv: { text: "Save as CSV" }
-            },
+
             nodeMenu: {
                 details: { text: "Details" },
                 edit: { text: "Edit" },
@@ -308,7 +287,6 @@
         }
     </script>
 
-    <!-- Дополнительные стили -->
     <style id="myStyles">
         /*partial*/
         [lcn='hr-team']>rect {
@@ -331,6 +309,8 @@
         [lcn='top-management'] circle,
         [lcn='assistant'] {
             fill: #aeaeae;
+            width: 200px;
+            height: 200px;
         }
 
         .assistant>rect {
@@ -389,6 +369,5 @@
             fill: #F57C00;
         }
     </style>
-</body>
-</html>
+
 {% endblock content %}
