org-chart admin editing rules

--- a/onboarding/templates/org_chart.html
+++ b/onboarding/templates/org_chart.html
@@ -40,7 +40,7 @@
             fill: #17c1e8 !important;
         }
         [data-l-id] path {
-            stroke: #ffffff;
+            stroke: #000000;
         }
 
     </style>
